# test-audio-transcribe-api

./: .gitignore  README.md  Zadanie.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/ai_clients/: __init__.py  abc_client.py  openai_client.py
app/api/: __init__.py
app/api/v1/: core.py  dependencies.py  transcribe.py  transcriptions.py
app/celery_app/: celery_app.py
app/celery_app/tasks/: async_task.py  transcriptions.py
app/configs/: __init__.py  core.py  gunicorn.conf.py  logs.py
app/db/: __init__.py  db.py
app/dependencies/: transcriptions.py
app/migrations/: env.py
app/migrations/versions/: 03.01.2026 in 15-29 ver_e28139865a02.py
app/models/: __init__.py  transcriptions.py
app/repositories/: __init__.py  abc_repo.py  base_sqlalchemy_repo.py  transcriptions.py
app/schemas/: questions.py  transcriptions.py
app/services/: transcriptions.py
app/storages/: __init__.py  abс_storage.py  local.py
docker/fastapi/: Dockerfile  Dockerfile.dockerignore  app.sh  fastapi.env.example
docker/postgres/: postgres.env.example
docker/rabbitmq/: rabbitmq.conf  rabbitmq.env.example
docs/v1/: api-endpoints.md  app-settings.md  architecture.md  database.md  docker-setup.md
