[project]
name = "test-audio-transcribe-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.0",
    "gunicorn==23.0.0",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.32.1",
]


[tool.mypy]
plugins = ["pydantic.mypy"]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
