[project]
name = "test-audio-transcribe-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.17.2",
    "fastapi==0.128.0",
    "gunicorn==23.0.0",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.21",
    "sqlalchemy[asyncio]==2.0.45",
    "uvicorn[standard]==0.32.1",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
namespace_packages=true
explicit_package_bases=true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "types-aiofiles==25.1.0.20251011",
]
